--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "^5.8.1",
     "aws-cdk": "^2.3.0",
     "aws-cdk-lib": "^2.3.0",
+    "aws-sdk": "^2.1108.0",
     "constructs": "^10.0.23",
     "eslint": "^8.6.0",
     "eslint-config-standard": "^16.0.3",
