--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@enfo/aws-cdkompliance": "^0.1.0"
+    "@enfo/aws-cdkompliance": "^0.1.0",
+    "@enfo/aws-secrets": "^2.1.0"
   }
 }
