chore: install @enfo/env-vars

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@enfo/aws-cdkompliance": "^0.1.0",
-    "@enfo/aws-secrets": "^2.1.0"
+    "@enfo/aws-secrets": "^2.1.0",
+    "@enfo/env-vars": "^1.0.0"
   }
 }
