--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@enfo/aws-cdkompliance": "^0.1.0",
     "@enfo/aws-secrets": "^2.1.0",
-    "@enfo/env-vars": "^1.0.0"
+    "@enfo/env-vars": "^1.0.0",
+    "ramda": "^0.28.0"
   }
 }
