--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.7",
+    "@types/ramda": "^0.28.7",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "aws-cdk": "^2.3.0",
