--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@aws-cdk/assert": "^2.3.0",
     "@commitlint/cli": "^16.0.1",
     "@commitlint/config-conventional": "^16.0.0",
+    "@types/aws-lambda": "^8.10.93",
     "@types/jest": "^27.4.0",
+    "@types/jspath": "^0.4.0",
     "@types/node": "^17.0.7",
     "@types/ramda": "^0.28.7",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
@@ -45,6 +47,9 @@
     "@enfo/aws-cdkompliance": "^0.1.0",
     "@enfo/aws-secrets": "^2.1.0",
     "@enfo/env-vars": "^1.0.0",
+    "aws-lambda": "^1.0.7",
+    "fp-ts": "^2.11.9",
+    "jspath": "^0.4.0",
     "ramda": "^0.28.0"
   }
 }
