--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "clean": "rm -f lib/*.js lib/*.d.ts test/*.js test/*.d.ts",
-    "test": "npm run clean && jest --runInBand",
+    "test": "npm run clean && jest --runInBand --coverage",
     "lint": "npx eslint --ext .ts .",
     "lint:fix": "npx eslint --fix --ext .ts ."
   },
