--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,15 @@
 *.ts
+!*Lambda.ts
 !*.d.ts
 
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+.husky
+coverage
+test
+.eslintrc.json
+*.config.js
+tsconfig.json
+README.MD
