--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^7.0.4",
     "jest": "^27.4.5",
     "jsii": "^1.56.0",
+    "jsii-pacmak": "^1.56.0",
     "pinst": "^3.0.0",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4"
