build: add jsii build scripts

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "prepublishOnly": "npx pinst --disable",
     "postpublish": "npx pinst --enable",
     "postinstall": "npx husky install",
-    "build": "tsc",
-    "watch": "tsc -w",
+    "build": "jsii",
+    "build:watch": "jsii --watch",
+    "package": "jsii-pacmak",
     "clean": "rm -f lib/*.js lib/*.d.ts test/*.js test/*.d.ts",
     "test": "npm run clean && jest --runInBand --coverage",
     "lint": "npx eslint --ext .ts .",
