--- a/package.json
+++ b/package.json
@@ -33,16 +33,17 @@
     "@types/jest": "^27.4.0",
     "@types/jspath": "^0.4.0",
     "@types/node": "^17.0.7",
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "aws-cdk": "^2.25.0",
-    "aws-cdk-lib": "2.25.0",
+    "aws-cdk-lib": "^2.89.0",
     "aws-sdk": "^2.1108.0",
-    "constructs": "10.1.15",
+    "constructs": "^10.2.69",
     "esbuild": "^0.14.34",
     "eslint": "^8.6.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
@@ -54,7 +55,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@enfo/aws-cdkompliance": "^0.1.0",
+    "@enfo/aws-cdkompliance": "^1.1.0",
     "@enfo/aws-secrets": "^2.2.1",
     "@enfo/env-vars": "^1.0.0",
     "aws-lambda": "^1.0.7",
