--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.3.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.382.0",
+    "@aws-sdk/client-sns": "^3.382.0",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@types/aws-lambda": "^8.10.93",
