refactor: update @enfo/aws-secrets to 3.0.0, remove aws-sdk and install ssm client

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@aws-cdk/assert": "^2.3.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.382.0",
     "@aws-sdk/client-sns": "^3.382.0",
+    "@aws-sdk/client-ssm": "^3.382.0",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@types/aws-lambda": "^8.10.93",
@@ -38,7 +39,6 @@
     "@typescript-eslint/parser": "^6.2.1",
     "aws-cdk": "^2.25.0",
     "aws-cdk-lib": "2.89.0",
-    "aws-sdk": "^2.1108.0",
     "constructs": "10.2.69",
     "esbuild": "^0.14.34",
     "eslint": "^8.6.0",
@@ -57,7 +57,7 @@
   },
   "dependencies": {
     "@enfo/aws-cdkompliance": "^1.1.0",
-    "@enfo/aws-secrets": "^2.2.1",
+    "@enfo/aws-secrets": "^3.0.0",
     "@enfo/env-vars": "^1.0.0",
     "aws-lambda": "^1.0.7",
     "fp-ts": "^2.11.9",
