--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@types/aws-lambda": "^8.10.93",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^29.5.3",
     "@types/jspath": "^0.4.0",
     "@types/node": "^17.0.7",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
@@ -48,11 +48,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.0",
+    "jest": "^29.6.2",
     "jsii": "^5.1.10",
     "jsii-pacmak": "^1.56.0",
     "pinst": "^3.0.0",
-    "ts-jest": "^28.0.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
@@ -80,5 +80,13 @@
   "jsii": {
     "outdir": ".dist",
     "versionFormat": "full"
-  }
+  },
+  "bundleDependencies": [
+    "@enfo/aws-secrets",
+    "@enfo/env-vars",
+    "aws-lambda",
+    "fp-ts",
+    "jspath",
+    "ramda"
+  ]
 }
