--- a/package.json
+++ b/package.json
@@ -26,19 +26,21 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "^2.3.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.382.0",
+    "@aws-sdk/client-sns": "^3.382.0",
+    "@aws-sdk/client-ssm": "^3.382.0",
     "@commitlint/cli": "^17.0.0",
     "@commitlint/config-conventional": "^17.0.0",
     "@types/aws-lambda": "^8.10.93",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^29.5.3",
     "@types/jspath": "^0.4.0",
-    "@types/node": "^17.0.7",
+    "@types/node": "^20.4.7",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "aws-cdk": "^2.25.0",
     "aws-cdk-lib": "2.89.0",
-    "aws-sdk": "^2.1108.0",
     "constructs": "10.2.69",
-    "esbuild": "^0.14.34",
+    "esbuild": "^0.18.17",
     "eslint": "^8.6.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.25.4",
@@ -46,16 +48,16 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.0",
+    "jest": "^29.6.2",
     "jsii": "^5.1.10",
     "jsii-pacmak": "^1.56.0",
     "pinst": "^3.0.0",
-    "ts-jest": "^28.0.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "@enfo/aws-cdkompliance": "^1.1.0",
-    "@enfo/aws-secrets": "^2.2.1",
+    "@enfo/aws-secrets": "^3.0.0",
     "@enfo/env-vars": "^1.0.0",
     "aws-lambda": "^1.0.7",
     "fp-ts": "^2.11.9",
