--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "aws-lambda": "^1.0.7",
     "fp-ts": "^2.11.9",
     "jspath": "^0.4.0",
+    "p-limit": "^4.0.0",
     "ramda": "^0.28.0"
   },
   "bundledDependencies": [
@@ -70,7 +71,8 @@
     "aws-lambda",
     "fp-ts",
     "jspath",
-    "ramda"
+    "ramda",
+    "p-limit"
   ],
   "peerDependencies": {
     "aws-cdk-lib": "^2.89.0",
