--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
     "aws-lambda": "^1.0.7",
     "fp-ts": "^2.11.9",
     "jspath": "^0.4.0",
-    "p-limit": "^4.0.0",
     "ramda": "^0.28.0"
   },
   "bundledDependencies": [
@@ -71,8 +70,7 @@
     "aws-lambda",
     "fp-ts",
     "jspath",
-    "ramda",
-    "p-limit"
+    "ramda"
   ],
   "peerDependencies": {
     "aws-cdk-lib": "^2.89.0",
